fix: modify the documents

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <p>read <a href="about.html#05">chapter 5 </a></p>
     <p>to call <a href="tel:081030477708"></a>ot</p>
 
-    <p>
 
+    <p><a href="./food.html" target="_blank"> Classes of food</a></p>
 
 
     </p>
