Bug: update code

--- a/index.html
+++ b/index.html
@@ -7,18 +7,10 @@
 </head>
 <body>
 <section>
-
-    <p>read me <a href="./about.html">about us</a></p>
-    <p>to find out more <a href="#">about univelcity</a></p>
-    <p>read <a href="about.html#05">chapter 5 </a></p>
-    <p>to call <a href="tel:081030477708"></a>ot</p>
-
-
-    <p><a href="./food.html" target="_blank"> Classes of food</a></p>
-
-
+    
+    <p>
+        <a href="./food.html">classwork</a>
     </p>
-
 
 </section>
 </body>
